name:                gcodehs
version:             0.1.1.0
synopsis:            GCode processor
description:         GCode parser, pretty-printer and processing utils
homepage:            https://github.com/hackerspace/gcodehs
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2016 Richard Marko
category:            Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GCode
                     , Data.GCode.Canon
                     , Data.GCode.Generate
                     , Data.GCode.Generate.Examples
                     , Data.GCode.Generate.ExamplesMonad
                     , Data.GCode.Eval
                     , Data.GCode.Monad
                     , Data.GCode.Types
                     , Data.GCode.Parse
                     , Data.GCode.Pretty
                     , Data.GCode.RS274
                     , Data.GCode.RS274.Types
                     , Data.GCode.TH
                     , Data.GCode.Utils
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , ansi-wl-pprint
                     , bytestring
                     , containers
                     , transformers
                     , double-conversion
                     , text
                     , template-haskell
  default-language:    Haskell2010

executable gcodehs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , containers
                     , double-conversion
                     , gcodehs
                     , text
                     , transformers
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
--                     , pipes-bytestring-mmap
                     , pipes-safe
                     , pipes-parse
                     , optparse-applicative
  default-language:    Haskell2010

test-suite gcodehs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParseSpec
                       GenSpec
                       EvalSpec
                       SpecHelper
  build-depends:       base
                     , attoparsec
                     , ansi-wl-pprint
                     , bytestring
                     , gcodehs
                     , hspec
                     , hspec-discover
                     , text
                     , turtle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hackerspace/gcodehs
